#
# This file is part of DisOrder.
# Copyright (C) 2004, 2005, 2006 Richard Kettlewell
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
# USA
#

pkgdata_DATA=about.html choose.html credits.html playing.html recent.html \
	     stdhead.html stylesheet.html search.html about.html volume.html \
	     sidebar.html prefs.html help.html choosealpha.html topbar.html \
	     sidebarend.html topbarend.html error.html \
	     options options.labels \
	     options.columns
static_DATA=disorder.css
staticdir=${pkgdatadir}/static

EXTRA_DIST=${pkgdata_DATA} $(static_DATA)
# arch-tag:c04ecae39c46f7a88463e746b857d913
