#
# This file is part of DisOrder.
# Copyright (C) 2004-2008 Richard Kettlewell
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

pkgdata_DATA=about.tmpl choose.tmpl playing.tmpl recent.tmpl		\
	     about.tmpl prefs.tmpl help.tmpl error.tmpl			\
	     new.tmpl login.tmpl macros.tmpl				\
	     options options.labels					\
	     options.columns
pkghttp_DATA=disorder.css

EXTRA_DIST=${pkgdata_DATA} $(pkghttp_DATA)
